--- a/src/ejs/index.ejs
+++ b/src/ejs/index.ejs
@@ -23,9 +23,7 @@
             <div class="chat-list"></div>
           </div>
         </script>
-        <div class="chat-view">
-          <div class="chat-list"></div>
-        </div>
+        <div class="chat-list" id="chatList"></div>
       </div>
     </div>
     <script type="text/javascript" src="js/<%= jsFile %>?v=<%= version %>"></script>
