--- a/src/less/app.less
+++ b/src/less/app.less
@@ -1,10 +1,16 @@
-.main {
-  margin: 0;
-  padding: 90px 0 0;
+html, body {
   width: 100%;
   height: 100%;
-  min-width: 300px;
+  margin: 0;
+  padding: 0;
   font-family: Geneva, Arial, Helvetica, sans-serif;
+}
+
+.main {
+  margin: 0 auto;
+  padding: 90px 0 0;
+  min-width: 300px;
+  max-width: 1200px;
 
   .header {
     display: block;
