--- a/src/ejs/index.ejs
+++ b/src/ejs/index.ejs
@@ -23,7 +23,10 @@
             <div class="chat-list"></div>
           </div>
         </script>
-        <div class="chat-list" id="chatList"></div>
+        <script type="text/template" id="chatList">
+          <div class="chat-list"></div>
+        </script>
+        <div id="chatView"></div>
       </div>
     </div>
     <script type="text/javascript" src="js/<%= jsFile %>?v=<%= version %>"></script>
