--- a/public/css/app.css
+++ b/public/css/app.css
@@ -8,7 +8,7 @@ body {
 }
 .main {
   margin: 0 auto;
-  padding: 90px 0 0;
+  padding: 70px 0 0;
   min-width: 300px;
   max-width: 1200px;
 }
@@ -20,10 +20,10 @@ body {
   margin: 0;
   padding: 0;
   width: 100%;
-  z-index: 999;
+  z-index: 998;
   font-size: 36px;
   line-height: 48px;
-  padding: 21px 0;
+  padding: 10px 0;
   text-align: center;
   text-transform: uppercase;
   font-weight: 900;
@@ -31,4 +31,62 @@ body {
   background: #000000;
   overflow: hidden;
   white-space: nowrap;
+}
+.main .chat-list {
+  margin-bottom: 20px;
+}
+.main .chat-list:after {
+  display: block;
+  content: '';
+  clear: both;
+}
+.main .chat-list-item {
+  clear: both;
+  padding: 20px;
+}
+.main .chat-list-item-photo {
+  float: left;
+  width: 88px;
+  height: 80px;
+}
+.main .chat-list-item-photo img {
+  width: 100%;
+  height: 100%;
+}
+.main .chat-list-item-text {
+  margin-left: 100px;
+}
+.main .chat-list-item-actions {
+  margin: 10px 0 0 100px;
+}
+.main .chat-list-item .chat-list {
+  margin-bottom: -20px;
+  margin-left: 25px;
+}
+.main .chat-form {
+  display: block;
+  position: fixed;
+  left: 0;
+  bottom: 0;
+  margin: 0;
+  padding: 10px;
+  width: 100%;
+  z-index: 999;
+  background: #999999;
+  box-sizing: border-box;
+}
+.main .chat-form-header {
+  margin-bottom: 10px;
+  font-size: 18px;
+}
+.main .chat-form-text {
+  width: 100%;
+  height: 70px;
+  margin: 0;
+  padding: 0;
+  display: block;
+  box-sizing: border-box;
+}
+.main .chat-form .submit {
+  margin: 10px 0;
 }
