--- a/src/less/app.less
+++ b/src/less/app.less
@@ -8,7 +8,7 @@ html, body {
 
 .main {
   margin: 0 auto;
-  padding: 90px 0 0;
+  padding: 70px 0 0;
   min-width: 300px;
   max-width: 1200px;
 
@@ -20,10 +20,10 @@ html, body {
     margin: 0;
     padding: 0;
     width: 100%;
-    z-index: 999;
+    z-index: 998;
     font-size: 36px;
     line-height: 48px;
-    padding: 21px 0;
+    padding: 10px 0;
     text-align: center;
     text-transform: uppercase;
     font-weight: 900;
@@ -35,12 +35,62 @@ html, body {
 
   .chat {
     &-list {
+      margin-bottom: 20px;
+      &:after {
+        display: block;
+        content: '';
+        clear: both;
+      }
       &-item {
-
+        clear: both;
+        padding: 20px;
+        &-photo {
+          float: left;
+          width: 88px;
+          height: 80px;
+          img {
+            width: 100%;
+            height: 100%;
+          }
+        }
+        &-text {
+          margin-left: 100px;
+        }
+        &-actions {
+          margin: 10px 0 0 100px;
+        }
+        .chat-list {
+          margin-bottom: -20px;
+          margin-left: 25px;
+        }
       }
     }
     &-form {
-
+      display: block;
+      position: fixed;
+      left: 0;
+      bottom: 0;
+      margin: 0;
+      padding: 10px;
+      width: 100%;
+      z-index: 999;
+      background: #999999;
+      box-sizing: border-box;
+      &-header {
+        margin-bottom: 10px;
+        font-size: 18px;
+      }
+      &-text {
+        width: 100%;
+        height: 70px;
+        margin: 0;
+        padding: 0;
+        display: block;
+        box-sizing: border-box;
+      }
+      .submit {
+        margin: 10px 0;
+      }
     }
   }
 
